Align affiliate link correctly on mobile.
[Fixes #125612771](https://www.pivotaltracker.com/story/show/125612771)

--- a/src/components/posts/PostBody.sass
+++ b/src/components/posts/PostBody.sass
@@ -49,6 +49,7 @@
   transform-origin: 0 0
   transition: background-color $speed2, transform 300ms ease, margin-bottom 300ms ease
   will-change: transform, margin-bottom
+  position: relative
 
 .RegionContent.asHotRegion
   cursor: pointer
